--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ services:
 
 before_install:
   - sudo apt-get install sshpass
+  - sshpass -p "$SERVER_PASSWORD" ssh -o StrictHostKeyChecking=no root@68.183.230.245 
 
 script:
 
